Fixing: wrong width calculated in some cases

--- a/ekko-lightbox.less
+++ b/ekko-lightbox.less
@@ -103,7 +103,7 @@
                 .ekko-lightbox-container {
                     .ekko-lightbox-item.fade {
                         &.in.show {
-                            img, img[data-sizes="auto"], iframe {
+                            img, img[data-sizes="auto"] {
                                 max-width: 100% !important;
                                 max-height: 100% !important;
                                 display: block;
@@ -206,5 +206,16 @@
             transform: scale(1.0);
             -webkit-transform: scale(1.0);
         }
+    }
+
+    .modal-debug-info {
+        position: absolute;
+        top: 5px;
+        left: 5px;
+        background-color: gray;
+        color: #fff;
+        padding: 10px;
+        white-space: pre-line;
+        z-index: 2000;
     }
 }
